Add dashboard for azure

--- a/config/testgrids/kubernetes/sig-scalability/config.yaml
+++ b/config/testgrids/kubernetes/sig-scalability/config.yaml
@@ -2,6 +2,7 @@ dashboard_groups:
 - name: sig-scalability
   dashboard_names:
     - sig-scalability-aws
+    - sig-scalability-azure
     - sig-scalability-gce
     - sig-scalability-node
     - sig-scalability-kubemark
@@ -13,6 +14,7 @@ dashboard_groups:
 
 dashboards:
 - name: sig-scalability-aws
+- name: sig-scalability-azure
 - name: sig-scalability-gce
 - name: sig-scalability-kubemark
 - name: sig-scalability-node
