--- a/config/jobs/kubernetes/sig-scalability/sig-scalability-periodic-azure.yaml
+++ b/config/jobs/kubernetes/sig-scalability/sig-scalability-periodic-azure.yaml
@@ -62,10 +62,12 @@ periodics:
         value: "false"
       - name: KUBERNETES_VERSION
         value: "v1.25.3"
+      - name: "CONTROL_PLANE_MACHINE_COUNT"
+        value: "5"
       - name: WINDOWS_WORKER_MACHINE_COUNT
         value: "0" # Don't create windows workers
       - name: WORKER_MACHINE_COUNT
-        value: "100" 
+        value: "100"
       - name: CL2_POD_COUNT
         value: "10"
       # clusterloader2 variables
