--- a/config/jobs/kubernetes/sig-scalability/sig-scalability-periodic-azure.yaml
+++ b/config/jobs/kubernetes/sig-scalability/sig-scalability-periodic-azure.yaml
@@ -18,6 +18,10 @@ periodics:
     preset-azure-community: "true"
   extra_refs:
   - org: kubernetes
+    repo: kubernetes
+    base_ref: master
+    path_alias: k8s.io/kubernetes
+  - org: kubernetes
     repo: perf-tests
     base_ref: "master"
     path_alias: "k8s.io/perf-tests"
@@ -54,22 +58,20 @@ periodics:
         privileged: true
       env:
         # CAPZ variables
+      - name: TEST_K8S
+        value: "true"
       - name: CLUSTER_TEMPLATE
-        value: "test/ci/cluster-template-prow-load.yaml"
+        value: "templates/test/ci/cluster-template-prow-load.yaml"
       - name: NODE_MACHINE_TYPE
-        value: "Standard_D16s_v3"
+        value: "Standard_D8s_v3"
       - name: TEST_WINDOWS
         value: "false"
-      - name: KUBERNETES_VERSION
-        value: "v1.25.3"
       - name: "CONTROL_PLANE_MACHINE_COUNT"
-        value: "5"
+        value: "3"
       - name: WINDOWS_WORKER_MACHINE_COUNT
         value: "0" # Don't create windows workers
       - name: WORKER_MACHINE_COUNT
         value: "100"
-      - name: CL2_POD_COUNT
-        value: "10"
       # clusterloader2 variables
       - name: ENABLE_PROMETHEUS_SERVER
         value: "true"
